@@ -9,6 +9,7 @@ Cobbler CHANGELOG
 - Do not own tftpboot
 - Default arches to 'i386' not 'x86' for consistency, esp. in import
 - When querying kickstart templates, do not return directories
+- Make triggers for add/delete work for renames and copies (same triggers)
 
 - Wed May 27 2008 - 1.0.0
 - Merge devel branch onto master, this is 1.0
